<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">SuperChat</string>
    <string name="profile">Profile</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="user_profile">My Profile</string>
     <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="superchat_welcome">Welcome to</string>
    <string name="verification_code_sent">A Verification code was sent to you</string>
    <string name="please_make_sure">Please make sure your mobile number is active</string>
    <string name="registration_title">START A NEW HUB</string>
    <string name="create_hub_profile_optional">Complete profile (optional fields)</string>
    <string name="verify_phone_number_msg">Please enter your mobile number</string>
    <string name="self_verify_phone_number_msg">Unable to verify this time, please try after sometime.</string>
    <string name="lbl_please_try_later">Sorry, could not create the group due to a technical error. Please try after sometime.</string>
    <string name="error_network_connection">No network connection. Please check your network/Wi-Fi settings.</string>
    <string name="create_group_validation_message">Please enter a group name.</string>
    <string name="lbl_server_not_responding">Cannot connect to the server, please try after some time.</string>
    <string name="network_not_responding">Unable to connect to the network, please try again.</string>
    <string name="carrier_sms_charge_msg">Carrier SMS charge may apply</string>
    <string name="check_net_connection">Please check network connection!</string>
    <string name="country_mobile_validation">Please select your country and enter mobile number.</string>
    <string name="country_validation">Please select your country.</string>
    <string name="domain_validation">Please enter the name of your Hub.</string>
    <string name="please_enter_name">Please enter a profile name between 3 and 50 characters containing only alphabet.</string>
    <string name="please_enter_name_alpha">Please enter a profile name between 3 and 50 characters containing only alphabet.</string>
    <string name="please_enter_valid_name">Please enter a profile name between 3 and 50 characters containing only alphabet.</string>
    <string name="please_enter_pass">Please enter a password.</string>
    <string name="please_enter_pass_length">Please enter at least 6 characters for password.</string>
    <string name="please_enter_conf_pass">Please confirm your password.</string>
    <string name="please_enter_conf_pass_length">Please enter at least 6 characters for confirm password.</string>
    <string name="please_enter_pass_mismatch">Passwords do not match!</string>
    <string name="password_mismatch_on_toast">Your passwords do not match! \n Please try again.</string>
     <string name="password_tips">Must be 6 characters long</string>
    <string name="please_write_status">Please write some text for status update.</string>
    <string name="no_image_delete">No image to delete.</string>
    <string name="please_enter_email">Please enter a valid email address.</string>
    <string name="please_enter_org_name">Please enter your organization’s name.</string>
    <string name="photo_upload_failed">Photo upload failed! Please try again.</string>
    <string name="failed">Failed</string>
     <string name="enter_valid_name">Please enter valid name.</string>
    <string name="mobile_validation">Please enter your mobile number.</string>
    <string name="mobile_validation_length">Please enter a valid number in range [8 - 16]</string>
    <string name="invalid_audio_message">Please record minimum 3 secs to send voice message</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="start_chat">Start Chat</string>
    <string name="next_txt">Next</string>
    <string name="camera">Camera</string>
    <string name="coming_soon_lbl">Coming soon</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="gallery_settings">Save Media to Gallery</string>
    <string name="chat">Chat Backup</string>
    <string name="data_usage_settings">Auto Download Options</string>
    <string name="inbox">Inbox</string>
    <string name="small_chat">Chats</string>
    <string name="pin_not_entered">Please enter verification code.</string>
    <string name="all_contacts">All Contacts</string>
    <string name="all">ALL</string>
    <string name="sms">SMS</string>
    <string name="close">Close</string>
    <string name="reply">Reply</string>
    <string name="invite_in_group">Invite</string>
    <string name="ppt">PPT</string>
    <string name="doc">DOC</string>
    <string name="xls">XLS</string>
    <string name="pdf">PDF</string>
    <string name="ok">Ok</string>
    <string name="contact">Contacts</string>
     <string name="contacts_search">Contacts search</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="contact_info">Contact Info</string>
    <string name="block_contact">Block this contact</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="block_alert">You have blocked this user. To send a message, you will first have to unblock this user.</string>
    <string name="block_successful">User blocked successfully.</string>
   <string name="block_confirmation">Are you sure you want to block this person? You will no longer be able to send or receive messages and calls from this person.</string>
   <string name="unblock_confirmation">Are you sure you want to unblock this person? Unblocking will allow them to message/call or contact you.</string>
     <string name="unblock_successful">User unblocked successfully.</string>
    <string name="block_you">You</string>
    <string name="more_title">More</string>
    <string name="personal_data">Personal Data</string>
    <string name="name">Name(*)</string>
     <string name="name_label">Name</string>
    <string name="type_group_name">Type group name</string>
    <string name="type_broadcast_name">Type broadcast name</string>
    <string name="dob">Birthday</string>
    <string name="plz_select_dob">Please enter your birthday</string>
    <string name="gender">Gender</string>
    <string name="who_is_this_supergroup">Who is this Hub for?</string>
     <string name="please_select_who_this_for">Please select who this Hub is for:</string>
    <string name="registered_number">Registered number</string>
    <string name="registered_email">Registered email</string>
    <string name="identity_type">Identity type</string>
    <string name="identity_number">Identity number</string>
    <string name="change_number_message">Use change number to migrate your SuperChat JD, account info, groups and setting from your Current Phone Number to your New Phone Number.\n\n You can\'t undo this change\n\n\ To process, please confirm that your new number able to receive SMS or Calls. Tap Next to verify the number.</string>
    <string name="manage_block_user">Manage Block User</string>
    <string name="network_usage">Network Usage</string>
    <string name="change_number">Change Number</string>
    <string name="my_groups">My Groups</string>
    <string name="open_groups">Open Groups</string>
    <string name="open_gp">Open Group</string>
    <string name="close_gp">Closed Group</string>
    <string name="groups">Groups</string>
    <string name="group_info">Group Info</string>
    <string name="message_info">Message Info</string>
    <string name="group_name">Desired group name</string>
    <string name="enter_group_name_hinttxt">Enter Group Name(*)</string>
    <string name="channel_name">Open Group Name(*)</string>
    <string name="broadcast_hint">Broadcast Name(*)</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="enter_description">Type description(*)</string>
    <string name="description">Description</string>
    <string name="new_description">Hub description\n(Up to 500 characters - optional)</string>
    <string name="new_description_optional">Max 500 characters</string>
    <string name="create_closed_group_subtitle">Closed - Members cannot join without an invitation from an admin</string>
    <string name="create_open_group_subtitle">All members of your Hub will be able to search for and join this group.</string>
    <string name="create_group_bottomtitle">You can have both private or public groups within your Hub.</string>
    <string name="create_group">Create Group</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="back_large">BACK</string>
    <string name="group_Chat">Group Chat</string>
    <string name="edit_group">Edit</string>
    <string name="edit_group_title">Edit Group</string>
    <string name="edit_channel_title">Edit Open Group</string>
    <string name="add_new">Add New</string>
    <string name="create_broadcast">Create Broadcast</string>
    <string name="edit_broadcast">Edit Broadcast</string>
    <string name="broadcast">Broadcast</string>
    <string name="broadcast_text">Change your Group to Broadcast Mode</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="done">Done</string>
    <string name="done_caps">DONE</string>
    <string name="add">Add</string>
    <string name="type_contact_name">Type contact name</string>
    <string name="message_hint">Message...</string>
    <string name="add_broadcast_list">Add Broadcast List</string>
    <string name="search_name_here">Search Name Here</string>
    <string name="search">Search</string>
    <string name="view_all_media">View All Media</string>
    <string name="view_all_docs">View All Documents</string>
    <string name="docs">Documents</string>
    <string name="media">Media</string>
    <string name="media_and_doc">Media &amp; Document</string>
    <string name="group_notification">Group Notification</string>
    <string name="mute_group_chat">Mute Group Chat</string>
    <string name="owner">Owner</string>
    <string name="cancel">Cancel</string>
    <string name="user_block_list">Block List</string>
    <string name="user_block_list_text">List of contacts you have blocked</string>
    <string name="send_message">Send Message</string>
    <string name="add_as_admin">Make Admin</string>
    <string name="remove_as_admin">Remove As Admin</string>
    <string name="remove_user">Remove Member</string>
    <string name="invite_member">Invite Member</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="call_settings">Call settings</string>
    <string name="chat_settings">Chat settings</string>
    <string name="call_settings_text">Do not allow any call</string>
    <string name="chat_settings_text">Do not allow any private message</string>
    <string name="super_admins_can_always_message_you">Please note: The Super Admins can always message you.</string>
    <string name="create_broadcast_list">Create Broadcast List</string>
    <string name="back_up_message">Backup your message to Server. You can restore them when you reinstall SuperChat. Your messages and media will also backup to your phones internal storage.</string>
    <string name="last_backup">Last Backup</string>
    <string name="backup">BACKUP NOW</string>
    <string name="chat_backup">Chat backup</string>
    <string name="chat_backup_settings">Chat backup settings</string>
    <string name="backup_to_server">Backup to Server</string>
    <string name="back_up_over">Backup over</string>
    <string name="search_icon">Search</string>
    <string name="compose_icon">Compose</string>
    <string name="id_create_group_icon">Create</string>
    <string name="Setting">Settings</string>
</resources>