<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.HomeScreen">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:orderInCategory="100"
        android:title="@string/search_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/compose_icon"
        android:icon="@drawable/compose_icon"
        android:orderInCategory="100"
        android:title="@string/compose_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/sync_id"
        android:icon="@drawable/contacts_sync_icon"
        android:orderInCategory="100"
        android:title="@string/compose_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/id_create_group_icon"
        android:icon="@drawable/create_group_img"
        android:orderInCategory="100"
        android:title="@string/id_create_group_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/id_create_group_text"
        android:orderInCategory="100"
        android:title="@string/create_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_broadcast_list"
        android:orderInCategory="100"
        android:title="@string/create_broadcast_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/invite_member"
        android:orderInCategory="100"
        android:title="@string/invite_member"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/Setting"
        app:showAsAction="never" />
</menu>