<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_login_change_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="1dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/material_margin">

            <com.superchat.widgets.MyriadRegularTextView
                android:id="@+id/id_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/chat_name_color"
                android:textSize="18sp" >
            </com.superchat.widgets.MyriadRegularTextView>

            <com.superchat.widgets.MyriadRegularTextView
                android:id="@+id/id_message_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin"
                android:text="@string/send_message"
                android:textColor="@color/chat_name_color"
                android:textSize="18sp" >
            </com.superchat.widgets.MyriadRegularTextView>

            <com.superchat.widgets.MyriadRegularTextView
                android:id="@+id/id_remove_admin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin"
                android:text="@string/remove_as_admin"
                android:textColor="@color/chat_name_color"
                android:textSize="18sp"
                android:visibility="gone">
            </com.superchat.widgets.MyriadRegularTextView>

            <com.superchat.widgets.MyriadRegularTextView
                android:id="@+id/id_add_admin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin"
                android:text="@string/add_as_admin"
                android:textColor="@color/chat_name_color"
                android:textSize="18sp"
                android:visibility="gone">
            </com.superchat.widgets.MyriadRegularTextView>

            <com.superchat.widgets.MyriadRegularTextView
                android:id="@+id/id_remove_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin"
                android:text="@string/remove_user"
                android:textColor="@color/chat_name_color"
                android:textSize="18sp"
                android:visibility="gone">
            </com.superchat.widgets.MyriadRegularTextView>

            <com.superchat.widgets.MyriadRegularTextView
                android:id="@+id/id_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin"
                android:text="@string/cancel"
                android:textColor="@color/chat_name_color"
                android:textSize="18sp" >
            </com.superchat.widgets.MyriadRegularTextView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>