<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_chat_home"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/id_header_view"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/heder_height"
        android:background="@color/header_footer_color">

        <com.superchat.widgets.MyriadSemiboldTextView
            style="@style/style_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/privacy_settings" />

        <ImageView
            android:id="@+id/id_xmpp_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/red_dot"
            android:visibility="gone" />

        <TextView
            android:id="@+id/id_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:capitalize="characters"
            android:drawableLeft="@drawable/back_arrow_white"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/material_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_settings"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/llSwitchCallSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:gravity="center_vertical"
                    android:text="@string/call_settings_text"
                    android:textColor="@color/btn_text_color"
                    android:textSize="15dp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switchCallSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:checked="false" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/material_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_settings"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/llSwitchChatSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:gravity="center_vertical"
                    android:text="@string/chat_settings_text"
                    android:textColor="@color/btn_text_color"
                    android:textSize="15dp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switchChatSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:checked="false" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_admins_can_always_message_you"
                android:textSize="12dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/material_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_block_list"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/llBlockContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center_vertical"
                    android:text="@string/user_block_list_text"
                    android:textColor="@color/btn_text_color"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="right|center_vertical"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tvContactCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Contacts"
                        android:textSize="11dp" />

                    <ImageView
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/right_arrow" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
    </LinearLayout>


</LinearLayout>